# chattr

./: Cargo.toml
backend/: Cargo.toml
backend/src/: main.rs
common/src/: lib.rs
frontends/discord/: Cargo.toml
frontends/discord/src/: lib.rs
frontends/minecraft/: Cargo.toml
frontends/minecraft/src/: lib.rs
