[package]
name = "minecraft"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.80"
parking_lot = "0.12.1"
lazy_static = "1.4.0"
dotenvy = "0.15.7"
tracing = "0.1.40"

bichannel = { version = "0.0.4", features = ["crossbeam"] }
tokio = { version = "1.36.0", features = ["full"] }

azalea = { git = "https://github.com/azalea-rs/azalea", version = "0.9.0" }
common = { path = "../../common" }
